# it_solution_test_task

./: .env.template  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini
dockerfiles/: Dockerfile  Dockerfile.dev
dockerfiles/nginx/: nginx.conf
src/: schema.yml
src/cars/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
src/cars/migrations/: 0001_initial.py  0002_alter_car_fuel_type_alter_car_transmission.py  0003_alter_car_price.py  0004_alter_car_price.py  0005_alter_car_price.py  0006_alter_car_options.py  0007_alter_car_options.py
src/test_task/: schema.yml  settings.py  urls.py
